# Loco

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/loco/: __init__.py
src/loco/cli/: main.py
src/loco/cli/commands/: cleanup.py  create.py  list.py  logs.py  start.py  status.py  stop.py
src/loco/core/: constants.py  exceptions.py  models.py
src/loco/network/: manager.py  proxy.py  server.py  tunnel.py
src/loco/storage/: base.py  file_storage.py
src/loco/utils/: logging.py
tests/: conftest.py
tests/unit/: test_file_storage.py  test_network_manager.py  test_network_proxy.py  test_network_server.py  test_network_tunnel.py
